# src/modules/people/peopleValidation/peopleValidations.js
@@ -1,0 +1,7 @@
+import Joi from "joi";
+
+export const peopleValidation = Joi.object({
+    fullNames: Joi.string().required(),
+    email: Joi.string(),
+    phone: Joi.string()
+})
